src/objects/ClientInfo__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_State__c</fullName>
        <label>Client State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>Cannot be the Future date</description>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Optional__c</fullName>
        <label>Client Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Individual</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ClientInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>Current State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Current Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Current Zip</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Scenario Client</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Client_Leads</fullName>
        <columns>NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Email_Optional__c</columns>
        <columns>State__c</columns>
        <columns>PartnerID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Scenario Packages</label>
    </listViews>
</CustomObject>